testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket_or_hexadecimal/case4.expect.out
error: expected '}' or hexadecimal digit in unicode escape, found 'r'
  ==> case4.cj:14:14:
   | 
14 |     'adcs\u{123ere
   |          ~~     ^ expected '}' or hexadecimal digit
   |          |
   |          because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

1 error generated, 1 error printed.
